# MIUPREP_SYSTEM

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  LO_TRINH_TOI_UU.md  MIUPREP_IMPLEMENTATION_PLAN.md  package-lock.json  package.json
.githooks/: pre-commit
apps/cpe-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/cpe-desktop/src-tauri/src/: main.rs
apps/ielts-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/ielts-desktop/src-tauri/icons/: icon.icns
apps/ielts-desktop/src-tauri/src/: main.rs
docs/: api-contract.md  subject-boards-design.md
reports/: BAO_CAO_AUDIT_TOAN_DIEN.md  DE_XUAT_TOI_UU_SU_PHAM.md  desktop-apps-diff-analysis.md  miuprep-implementation-audit-plan.md
scratch/: audit_math7_issues.js  audit_math7_items.js  audit_math8_items.js  audit_math_preview.js  audit_report.txt  audit_report_utf8.txt  check-context.js  check-image-missing.js  check-more-contexts.js  check_char.py  check_empty_solutions.py  check_final.py  check_raw_saved.js  check_solution_completeness.py  cilog.txt  cilog2.txt  convert_pdf.ps1  cpe-diag.txt  extract-shared.mjs  extract_all_rar.ps1  extract_encoding_issues.py  extract_exact_issues.js  find-unmapped-glyphs.js  find_all_corruptions.js  find_blocker.js  find_mismatch.py  fix-math10-extract.py  ielts-diag.txt  inspect-accents.py  inspect-all-legacy.py  inspect-blockers-full.json  inspect-guard-issues.py  inspect_blockers.py  inspect_char_184.js  inspect_corrupted_contexts.js  inspect_corrupted_words.js  inspect_dict.py  inspect_exact_q25.js  inspect_issues.js  (+36 more)
(+1677 files in other folders)
