[package]
name = "cpe-prep-desktop"
version = "1.0.0"
description = "A CPE C2-style preparation and exam native desktop application."
authors = ["DeepMind Advanced Coding Agent"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
keyring = "2.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
